# kaguya

./: .gitignore  CLAUDE.md  Makefile  README.md  REFERENCES.md
.github/workflows/: proto-lint.yml  talker-ci.yml
config/: IDENTITY.md  SOUL.md  gateway.toml
console/: index.html  package-lock.json  package.json  supervisor.json  vite.config.ts
console/server/: plugin.ts  supervisor.ts
console/src/: App.css  App.tsx  config.ts  types.ts  ws.ts
console/src/components/: Conversation.tsx  LogPanel.tsx  Toolbar.tsx
docs/: REFERENCES.md  implementation-plan-v0.1.0.md  kaguya-manifesto-v0.1.0.md  spec-agent-v0.1.0.md  spec-endpoint-v0.1.0.md  spec-gateway-v0.1.0.md
gateway/: Cargo.toml  build.rs  structure.txt
gateway/config/: IDENTITY.md  MEMORY.md  SOUL.md  gateway.toml
gateway/src/: config.rs  context.rs  control.rs  endpoint.rs  error.rs  history.rs  input_stream.rs  lib.rs  listener.rs  main.rs  memory.rs  narration.rs  output.rs  persona.rs  reasoner.rs  silence.rs  talker.rs  tools.rs  types.rs
gateway/src/rag/: embedder.rs  lsp.rs  mod.rs  ranker.rs  retriever.rs  store.rs
proto/: buf.yaml
proto/kaguya/: gateway.proto  listener.proto  reasoner.proto  talker.proto
proto/kaguya/v1/: kaguya.proto
reasoner/: package.json  tsconfig.json
talker/: README.md  config.py  main.py  prepare.py  pyproject.toml  server.py
talker/inference/: llm_client.py  prompt_formatter.py  sentence_detector.py  soul_container.py
talker/proto/: __init__.py  kaguya_pb2.py  kaguya_pb2.pyi  kaguya_pb2_grpc.py  kaguya_pb2_grpc.pyi
talker/proto/kaguya/v1/: kaguya_pb2.py  kaguya_pb2_grpc.py
talker/scripts/: gen_proto.py  mic_to_listener_harness.py
talker/scripts/discord_harness/: .env.example  __main__.py  pyproject.toml
talker/tests/: test_grpc_handshake.py  test_imports.py  test_main_bind.py  test_prompt_formatter.py  test_sentence_detector.py  test_soul_container.py  test_turn_detection_threading.py
talker/voice/: listener.py  opus_decoder.py  speaker.py  turn_detection.py  turn_detector.py
