[project]
name = "kaguya-talker"
version = "0.1.0"
description = "Kaguya Talker Agent — voice listener, LLM pipeline, TTS speaker"
requires-python = ">=3.11"
dependencies = [
    "RealtimeSTT",
    "RealtimeTTS[kokoro]",
    "opuslib",
    "grpcio>=1.60.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Service — not published to PyPI. Wheel config exists only to satisfy hatchling.
packages = ["voice", "inference"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "grpcio-tools>=1.60.0",
]

# NOTE: uv doesn't support [tool.uv.scripts] in stable releases yet.
# To regenerate proto stubs: make proto (from repo root)
# Or: python scripts/gen_proto.py (from talker/)

[tool.ruff]
exclude = ["proto/"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.mypy]
# Generated proto stubs use dynamic protobuf descriptors — mypy can't resolve
# attributes like kaguya_pb2.ListenerEvent or kaguya_pb2.ROLE_SYSTEM.
# Skip type analysis on generated code; authored code still gets checked.
[[tool.mypy.overrides]]
module = "proto.*"
follow_imports = "skip"
