[project]
name = "kaguya-talker"
version = "0.1.0"
description = "Kaguya Talker Agent — voice listener, LLM pipeline, TTS speaker"
requires-python = ">=3.11"
dependencies = [
    "RealtimeSTT",
    "RealtimeTTS[kokoro]",
    "opuslib",
    "grpcio>=1.78.0",
    "protobuf>=6.31.1",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27.0",
    "pip",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Service — not published to PyPI. Wheel config exists only to satisfy hatchling.
packages = ["voice", "inference"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "grpcio-tools>=1.78.0",
    "mypy-protobuf>=3.6",
]

# NOTE: uv doesn't support [tool.uv.scripts] in stable releases yet.
# To regenerate proto stubs: make proto (from repo root)
# Or: python scripts/gen_proto.py (from talker/)

[tool.ruff]
exclude = ["proto/"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.mypy]
# mypy-protobuf generates .pyi stubs for proto code, so mypy/Pylance can
# resolve protobuf message/enum attributes. The grpc stubs have @overload
# signatures that mypy flags (overload-cannot-match) — suppress on generated
# code only; authored code is fully checked.
[[tool.mypy.overrides]]
module = "proto.*"
disable_error_code = ["overload-cannot-match"]
