[project]
name = "kaguya-discord-harness"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "discord.py[voice]>=2.3",
    "discord-ext-voice-recv>=0.5",
    # Talker deps (duplicated, not imported from parent)
    "RealtimeSTT",
    "RealtimeTTS[kokoro]",
    "opuslib",
    "grpcio>=1.78.0",
    "protobuf>=6.31.1",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27.0",
    "numpy",
    "python-dotenv>=1.0",
]
